<resources>
    <string name="app_name">Divar Hesam</string>
    <string name="nokte">پرداخت نقدی: بهتر است پرداخت مبلغ به صورت نقدی باشد. پرداخت اینترنتی و کارت به کارت: در صورت پرداخت اینترنتی یا کارت به کارت، به دیدن رسید پرداخت اکتفا نکنید. قبل از تحویل کالا، شخصاً از وارد شدن مبلغ به حسابتان مطمئن شوید. چک و سفته: چک و سفته ممکن است نقد نشوند. برای کسب اطلاعات بیشتر، به قوانین رسمی چک رجوع کنید. چک رمزدار بانکی: در صورت دریافت چک‌های رمزدار بانکی، با مراجعه به بانک مورد نظر، از اصالت آن مطمئن شوید.</string>
    <string name="hozori">معامله و پرداخت حضوری: امن‌ترین و بهترین راه خرید، معاملهٔ حضوری است. یعنی خریدار در ملاقات حضوری با فروشنده، کالا را ببیند، بررسی کند و همان زمان مبلغ را پرداخت نماید. هرگز بعد از تحویل کالا یا خدمات، پرداخت مبلغ را به زمان دیگری موکول نکنید. مکان امن: برای معاملهٔ حضوری، مکان‌های عمومی و شلوغ مانند شعب بانک و کلانتری‌ها مناسب هستند. شواهد معامله: بهتر است هنگام خرید کالا، رسید کتبی معتبر از فروشنده دریافت کنید</string>
    <string name="nokte_pish_moamele">بیعانه ندهید: هرگز پیش از دریافت کالا، هزینه‌ای تحت عنوان بیعانه، شیرینی، رزرو و… پرداخت نکنید. در صورتی که فروشنده از شما درخواست بیعانه کرد، لطفاً مورد را از طریق «گزارش مشکل آگهی» به دیوار اطلاع دهید. ذخیرهٔ اطلاعات: اطلاعات فروشنده و آگهی را حتماً ذخیره کنید تا در صورت نیاز، دسترسی سریع داشته باشید. امنیت در ملاقات: اگر می‌خواهید مبلغ قابل توجهی به کسی که نمی‌شناسید بپردازید یا کالای گران قیمتی را با خود حمل کنید، پیشنهاد می‌کنیم حتماً کسی همراه شما باشد. در غیر این صورت، فردی را در جریان جزئیات مکان و زمان ملاقات و مشخصات طرف مقابل بگذارید. درخواست فاکتور خرید: در مورد برخی کالاها مثل طلا و جواهر، بهتر است از فروشنده بخواهید فاکتور خرید را به همراه داشته باشد. درخواست بسته‌بندی اولیه: برای خرید وسایل الکترونیکی (مانند گوشی موبایل، تبلت، لپتاپ و …)، بهتر است از فروشنده بخواهید بسته‌بندی اولیه کالا را نیز ارائه کند. مدارک مالکیت و شناسایی کالا: در معاملات خودرو، بررسی تمام مدارک مالکیت و شناسایی خودرو الزامی است. تجربه نشان داده است خودروهایی که با تفویض وکالت‌های مکرر مورد معامله قرار می گیرند، مشکوک هستند. پرهیز از مزاحمت: دادن اطلاعات شخصی که نامربوط به معامله است، فقط احتمال مزاحمت را بالا می برد.</string>
    <string name="deghat"> اطمینان از کالا: قبل از دیدن کالا و بررسی مشخصات مورد نظرتان، پرداخت نکنید. دریافت مبلغ: برای پیگیری واریز مبلغ، حتماً حساب خود را چک کنید و به تصویر فیش پرداختی و رسید پرداخت اینترنتی اعتماد نکنید. تصاویر و اطلاعات کالا: از فروشنده بخواهید تصاویر واضح و اطلاعات کافی از کالا را در اختیار شما بگذارد. چت دیوار، امکانات لازم برای دریافت عکس و اطلاعات را در اختیار شما قرار می‌دهد. پرهیز از اعتماد بی‌جا: ارائه کردن اطلاعات شخصی مانند آدرس، شمارهٔ تلفن ثابت، اطلاعات حساب بانکی، شناسهٔ شبکه های اجتماعی و … معیاری برای اعتماد کردن به طرف مقابل نیست. چون ممکن است از اطلاعات شخص دیگری سوء استفاده شده باشد. خرید پستی: در خرید پستی، شما قبل از اطمینان از صحت کالا، هزینه را پرداخت می‌کنید. این روش بدون خطر نیست و دیوار این روش را توصیه نمی‌کند. مغایرت کالا با اطلاعات آگهی: در صورت مطابق‌ نبودن مشخصات کالا با مشخصات ذکر شده توسط فروشنده، کالا را بلافاصله برگشت دهید و نزد خود نگه ندارید.</string>
    <string name="naghs_divar">دیوار هیچ سودی از معاملات نمی‌برد و مسئولیتی نیز در قبالشان ندارد. در صورت مشاهدهٔ مورد مشکوک یا تخلف، از طریق «گزارش مشکل آگهی» و یا تماس با پشتیبانی دیوار، ما را در جریان قرار دهید. دیوار هیچ دخالتی در قیمت‌گذاری کالا و خدمات ندارد. قیمت‌ آگهی توسط آگهی‌دهنده مشخص می‌شود. در صورت مشاهده آگهی‌هایی با قیمت نامعقول، از طریق «گزارش مشکل آگهی» ما را در جریان قرار دهید. دیوار از هویت آگهی‌دهندگان و آگهی‌بینندگان آگاه نمی‌باشد. بنابراین کاربران باید خودشان جنبه‌های مختلف امنیتی را در نظر بگیرند. در صورتی که مزاحمت یا مشکلی برای شما ایجاد شده است، دیوار همکاری‌های لازم را با مراجع قانونی انجام می‌دهد.</string>
    <string name="khatar">قیمت و شرایط ارائه شده بیش از حد عالی به نظر می رسد. درخواست بیعانه قبل از دریافت کالا، به هر عنوانی توسط فروشنده پیشنهاد شود. فروشنده اطلاعات شفاف و کاملی دربارهٔ کالا ارائه نمی‌کند. در میانهٔ چت‌کردن در چت دیوار، مخاطب درخواست می‌کند که مکالمه در سایر پیام‌رسان‌ها مانند تلگرام و واتس‌اپ و … ادامه پیدا کند. طرف مقابل بدون دلیل منطقی درخواست معاملهٔ حضوری را رد کند. طرف مقابل بدون دلیل منطقی اطلاعات شخصی یا حساب بانکی شما را می‌پرسد. خریدار بخواهد بدون دیدن کالا، آن را با قیمت عالی بخرد. آگهی‌دهنده خود را از فروشندگان معتبر و تأیید شده توسط سایت دیوار معرفی می‌کند.</string>
    <string name="gozine_nazdik">نزدیک ترین گزینه را انتخاب کنید . کارشناسان ما گزارش شما را بررسی می کنند .</string>
    <string name="tozihatNumber">برای استفاده از امکانات دیوار ، لطفا شماره موبایل خود را وارد کنید . کد تایید به این شماره ارسال خواهد شد.</string>
    <string-array name="dastearray">

        <item>املاک</item>
        <item>وسایل نقلیه</item>
        <item>لوازم الکترونیکی</item>
        <item>مربوط به خانه</item>
        <item>خدمات</item>
        <item>وسایل شخصی</item>
        <item>سرگرمی و فراغت</item>
        <item>اجتماعی</item>
        <item>برای کسب و کار</item>
        <item>استخدام و کاریابی</item>

    </string-array>
</resources>